@@ -1,5 +1,8 @@
 2013-10-11  Roland McGrath  <mcgrathr@google.com>
 
+	* testsuite/Makefile.am: Replace '-T foo' with '-Wl,-T,foo' throughout.
+	* testsuite/Makefile.in: Regenerate.
+
 	* target.h (Target::adjust_elf_header, Target::do_adjust_elf_header):
 	Remove const from declaration.
 	* target.cc (Sized_target::do_adjust_elf_header): Update definition.
